# ConvFinQA-FastAPI-App

./: .env.example  .gitignore  README.md  evaluation_results.json  pyproject.toml  server.py
agentic_financial_qa/: main.py
agentic_financial_qa/api/: __init__.py  routes.py
agentic_financial_qa/core/: __init__.py  workflow.py
scripts/: batch_inference_eval_finqa.py
src/: __init__.py  main.py
src/api/: models.py  routes.py
src/core/: workflow.py
tests/: __init__.py  test_api.py
